Add image in png format

--- a/Introduction to Probability.ipynb
+++ b/Introduction to Probability.ipynb
@@ -276,7 +276,7 @@
    "source": [
     "## What does 0 and 1 actually mean?\n",
     "\n",
-    "<img src=\"media/probability-line.svg\">\n",
+    "<img src=\"media/probability-line.png\">\n",
     "\n",
     "source: https://www.mathsisfun.com/data/probability.html"
    ]
